# apkr

./: .gitignore  LICENCE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.afdesign  icon_droid.afdesign  icon_droid.icns
src-tauri/icons/icon.icon/: icon.json
src-tauri/src/: apk.rs  arsc.rs  axml.rs  commands.rs  lib.rs  main.rs  utils.rs
