[package]
name = "apk-info-viewer"
version = "0.1.0"
description = "APK basic information viewer"
authors = ["apkk"]
edition = "2021"

[lib]
name = "apk_info_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
flate2 = "1"
regex = "1"
